--- a/2-front-end/secao-1-introducao-ao-frontend-e-javascript-assincrono/dia-01-ambiente-de-desenvolvimento/index.html
+++ b/2-front-end/secao-1-introducao-ao-frontend-e-javascript-assincrono/dia-01-ambiente-de-desenvolvimento/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Validador de Campos</title>
 </head>
+
 <body>
+  <div class="container">
+
+    <h1>Validador de Campos</h1>
+    <form action="">
+      <input type="text" placeholder="Insira aqui o valor" id="value">
+
+      <select name="campo" id="option">
+        <option value="cpf">CPF</option>
+        <option value="hexColor">Cor Hexadecimal</option>
+        <option value="email">email</option>
+        <option value="uuid">UUID</option>
+        <option value="url">url</option>
+      </select>
+
+      <button id="button">Validar</button>
+
+      <p id="answer">Digite o valor, escolha a opção e clique em validar</p>
+
+    </form>
+  </div>
+
   <script type="module" src="./scr/main.js" defer></script>
 </body>
 </html>
